fixing tests, still need to fix tests that require encryption scope